--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4"
-  }
+  },
+  
+    "proxy": "https://shopping-app-45uk.vercel.app"
+  
+  
 }
