--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fortawesome": "^0.0.1-security",
     "mongoose": "^8.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
